--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-    <link rel="stylesheet" href="/css/base.css" />
-    <link rel="stylesheet" href="/css/jquery.ui.rotatable.css" />
-    <link rel="stylesheet" href="/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/jquery.ui.rotatable.css" />
+    <link rel="stylesheet" href="./css/font-awesome.min.css" />
 
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.ui.touch-punch.min.js"></script>
-    <script type="text/javascript" src="/js/angular.min.js"></script>
-    <script type="text/javascript" src="/js/mobile-detect.js"></script>
-    <script type="text/javascript" src="/js/jquery.ui.rotatable.min.js"></script>
-    <script type="text/javascript" src="/js/lodash.js"></script>
+    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.ui.touch-punch.min.js"></script>
+    <script type="text/javascript" src="./js/angular.min.js"></script>
+    <script type="text/javascript" src="./js/mobile-detect.js"></script>
+    <script type="text/javascript" src="./js/jquery.ui.rotatable.min.js"></script>
+    <script type="text/javascript" src="./js/lodash.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
 
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -213,7 +213,7 @@
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Demo 1
-                            <span class="badge badge-primary badge-pill btn" ng-click="ctrl.loadTemplate('/json/ex1.json')">Import</span>
+                            <span class="badge badge-primary badge-pill btn" ng-click="ctrl.loadTemplate('./json/ex1.json')">Import</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center" ng-repeat="profile in ctrl.profiles">
                             <span>{{ profile.name }} <a href="javascript:;" ng-click="ctrl.removeData(ctrl.profiles,profile)"><i class="fa fa-trash text-danger"></i></a></span>
