--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/jquery.ui.rotatable.css" />
     <link rel="stylesheet" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
+    <!-- 'classic' theme -->
+    <script src="//cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.es5.min.js"></script>
+
 
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
@@ -17,35 +22,87 @@
     <script type="text/javascript" src="./js/mobile-detect.js"></script>
     <script type="text/javascript" src="./js/jquery.ui.rotatable.min.js"></script>
     <script type="text/javascript" src="./js/lodash.js"></script>
+    <script type="text/javascript" src="./js/canvas2image.js"></script>
+    <script type="text/javascript" src="./js/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
 
     <script type="text/javascript" src="./js/app.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 
-    <title>11Plan by iboommm</title>
+    <script>
+        async function makeScreenshot() {
+            await html2canvas(document.getElementById("container-field"), {
+                scale: 1
+            }).then(canvas => {
+                canvas.id = "canvasID";
+                var main = document.getElementById("main");
+                while (main.firstChild) {
+                    main.removeChild(main.firstChild);
+                }
+                main.appendChild(canvas);
+            });
+        }
+        var downloaded = false;
+
+        async function createLink() {
+            $("#a-download-temp").attr('download', "11plan-export.png");
+            $("#a-download-temp").attr('href', document.getElementById("canvasID").toDataURL());
+        }
+
+        $(() => {
+
+            $("#a-download").click(async function() {
+                await makeScreenshot();
+                await createLink();
+                this.triggerDownload = setInterval(() => {
+                    if ($("#a-download-temp").attr('href') != 'javascript:;') {
+                        var a = document.createElement("a"); //Create <a>
+                        a.href = $("#a-download-temp").attr('href') //Image Base64 Goes here
+                        a.download = "11plan-export.png"; //File name Here
+                        a.click(); //Downloaded file
+                        clearInterval(this.triggerDownload)
+                    } else {
+                        console.log('not ready')
+                    }
+                }, 200)
+            });
+        })
+    </script>
+    <title>11Plan by utdstats.com</title>
 </head>
 
 <body ng-controller="home as ctrl">
-    <div class="top_menu_mobile" ng-class="{ 'hidden' : !ctrl.isMobile  }">
-        <button class="btn btn-warning round-0 btn-sm" ng-class="{ 'hidden' : (ctrl.isMobile && this.toggleMenuBar) }" ng-click="this.toggleMenuBar = !this.toggleMenuBar"><i class="fa fa-reply"></i> Setting </button>
+
+    <div style="z-index: 0;position: fixed; ">
+
+        <div id="main">
+            <div id="screenshot">
+
+            </div>
+        </div>
     </div>
-    <div class="row p-0 m-0">
+    <div class="top_menu_mobile" ng-class="{ 'hidden' : !ctrl.isMobile  }">
+        <button class="btn btn-warning round-0 btn-sm" ng-class="{ 'hidden' : (ctrl.isMobile && ctrl.toggleMenuBar) }" ng-click="ctrl.toggleMenuBar = !ctrl.toggleMenuBar"><i class="fa fa-reply"></i> Setting  </button>
+    </div>
+    <div class="row p-0 m-0" style="z-index: 1">
         <div class="col-xs-12 col-md-6 p-0 m-0">
-            <div id="container-player" ng-class="{ 'hidden' : ctrl.isMobile && !this.toggleMenuBar }">
+            <div id="container-player" ng-class="{ 'hidden' : ctrl.isMobile && !ctrl.toggleMenuBar }">
                 <div class="home-sheet">
                     <div class="card h-100 rounded-0">
                         <div class="card-header bg-danger row m-0 text-white font-weight-bolder p-1">
                             <div class="col text-left">
                                 <i class="fa fa-home"></i> {{ ctrl.home.name}}
+
                             </div>
-                            <div class="col text-right">
-                                <select name="" class="form-control-sm" ng-model="ctrl.home.plan" ng-change="ctrl.changePlan('home')">
+                            <div class="col text-right" style="display: contents;">
+                                <span><select name="" class="form-control-sm" ng-model="ctrl.home.plan" ng-change="ctrl.changePlan('home')">
                                   <option ng-repeat="plan in ctrl.planSheet" ng-value="plan">{{ plan}}</option>
-                              </select>
+                              </select></span>
+                                <span class="color-picker-home"></span>
                             </div>
                         </div>
                         <div class="row m-0">
@@ -57,7 +114,7 @@
                                                 <input type="text" class="w-100 form-control-sm border-0" ng-model="player.name" />
                                             </div>
                                             <div class="col-2 p-0">
-                                                <button class="btn btn-warning btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'players' && ctrl.teamSwapSide == 'home')}" ng-click="ctrl.swapPlayer('home', 'players', key)">
+                                                <button class="btn btn-info btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'players' && ctrl.teamSwapSide == 'home')}" ng-click="ctrl.swapPlayer('home', 'players', key)">
                             <i class="fa fa-exchange"></i>
                           </button>
                                             </div>
@@ -73,7 +130,7 @@
                                                 <input type="text" class="w-100 form-control-sm border-0" ng-model="player.name" />
                                             </div>
                                             <div class="col-2 p-0">
-                                                <button class="btn btn-warning btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'subs' && ctrl.teamSwapSide == 'home')}" ng-click="ctrl.swapPlayer('home', 'subs', key)">
+                                                <button class="btn btn-info btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'subs' && ctrl.teamSwapSide == 'home')}" ng-click="ctrl.swapPlayer('home', 'subs', key)">
                             <i class="fa fa-exchange"></i>
                           </button>
                                             </div>
@@ -90,10 +147,11 @@
                             <div class="col text-left">
                                 <i class="fa fa-futbol-o"></i> {{ ctrl.away.name}}
                             </div>
-                            <div class="col text-right">
-                                <select name="" class="form-control-sm" ng-model="ctrl.away.plan" ng-change="ctrl.changePlan('away')">
+                            <div class="col text-right " style="display: contents;">
+                                <span><select class="form-control-sm" ng-model="ctrl.away.plan" ng-change="ctrl.changePlan('away')">
                                   <option ng-repeat="plan in ctrl.planSheet" ng-value="plan">{{ plan}}</option>
-                                </select>
+                                </select></span>
+                                <span class="color-picker-away"></span>
                             </div>
                         </div>
                         <div class="row m-0">
@@ -105,7 +163,7 @@
                                                 <input type="text" class="w-100 form-control-sm border-0" ng-model="player.name" />
                                             </div>
                                             <div class="col-2 p-0">
-                                                <button class="btn btn-warning btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'players' && ctrl.teamSwapSide == 'away')}" ng-click="ctrl.swapPlayer('away', 'players', key)">
+                                                <button class="btn btn-info btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'players' && ctrl.teamSwapSide == 'away')}" ng-click="ctrl.swapPlayer('away', 'players', key)">
                             <i class="fa fa-exchange"></i>
                           </button>
                                             </div>
@@ -121,7 +179,7 @@
                                                 <input type="text" class="w-100 form-control-sm border-0" ng-model="player.name" />
                                             </div>
                                             <div class="col-2 p-0">
-                                                <button class="btn btn-warning btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'subs' && ctrl.teamSwapSide == 'away')}" ng-click="ctrl.swapPlayer('away', 'subs', key)">
+                                                <button class="btn btn-info btn-sm btn-block rounded-0" ng-class="{ 'active' : (ctrl.teamSwapKey == key && ctrl.teamSwapPick == 'subs' && ctrl.teamSwapSide == 'away')}" ng-click="ctrl.swapPlayer('away', 'subs', key)">
                             <i class="fa fa-exchange"></i>
                           </button>
                                             </div>
@@ -148,21 +206,36 @@
                     </div>
                 </div>
                 <div class="tools-sheet">
-                    <div class="row h-100 p-0 m-0">
+                    <div class="row h-100 p-0 m-0" class="bottom_tools">
                         <div class="col btn btn-primary btn-block h-100 d-flex align-items-center justify-content-center p-0 m-0 rounded-0" ng-click="ctrl.reset()">
-                            <i class="fa fa-repeat"></i>
+                            <div class="row">
+                                <div class="col-12"><i class="fa fa-repeat fa-tool-icon"></i></div>
+                                <div class="col-12">Reset</div>
+                            </div>
                         </div>
                         <div class="col btn btn-warning btn-block h-100 d-flex align-items-center justify-content-center p-0 m-0 rounded-0" ng-click="ctrl.swap()">
-                            <i class="fa fa-exchange"></i>
+                            <div class="row">
+                                <div class="col-12"><i class="fa fa-exchange fa-tool-icon"></i></div>
+                                <div class="col-12">Swap</div>
+                            </div>
                         </div>
                         <div class="col btn btn-info btn-block h-100 d-flex align-items-center justify-content-center p-0 m-0 rounded-0" ng-click="ctrl.toggleArrowMenu()">
-                            <i class="fa fa-long-arrow-up"></i>
+                            <div class="row">
+                                <div class="col-12"><i class="fa fa-long-arrow-up fa-tool-icon"></i></div>
+                                <div class="col-12">Arrows</div>
+                            </div>
                         </div>
                         <div class="col btn btn-dark btn-block h-100 d-flex align-items-center justify-content-center p-0 m-0 rounded-0" ng-click="ctrl.toggleToolsMenu()">
-                            <i class="fa fa-plus-circle"></i>
+                            <div class="row">
+                                <div class="col-12"><i class="fa fa-plus-circle fa-tool-icon"></i></div>
+                                <div class="col-12">Menu</div>
+                            </div>
                         </div>
-                        <div class="col btn btn-success btn-block h-100 align-items-center justify-content-center p-0 m-0 rounded-0" ng-click="this.toggleMenuBar = !this.toggleMenuBar" ng-class="{ 'd-none' : !ctrl.isMobile, 'd-flex' : ctrl.isMobile }">
-                            <i class="fa fa-save"></i>
+                        <div class="col btn btn-success btn-block h-100 align-items-center justify-content-center p-0 m-0 rounded-0" ng-click="ctrl.toggleMenuBar = !ctrl.toggleMenuBar" ng-class="{ 'd-none' : !ctrl.isMobile, 'd-flex' : ctrl.isMobile }">
+                            <div class="row">
+                                <div class="col-12"><i class="fa fa-save"></i></div>
+                                <div class="col-12">Save</div>
+                            </div>
                         </div>
                     </div>
 
@@ -172,6 +245,13 @@
         </div>
         <div class="col-xs-12 col-md-6 p-0 m-0">
             <div id="container-field">
+                <div style="position: absolute; bottom: 0.5rem; right: 0.5rem; z-index: 1111;">
+                    <a id="a-download" class="btn btn-primary btn-sm" href="javascript:;"><i class="fa fa-camera" > </i> Export</a>
+                    <a id="a-download-temp" class="btn btn-primary btn-sm" style="display: none;" href="javascript:;">a</a>
+                </div>
+                <div style="position: absolute; bottom: 0.5rem; left: 0.5rem; z-index: 1111;" class="text-white font-weight-bold noselect">
+                    11Plan by utdstats.com
+                </div>
                 <div class="ball" ng-style="ctrl.ball.position"></div>
                 <div ng-repeat="(key,player) in ctrl.home.players" class="player player-home player-home-{{ key }}" ng-style="player.position">
                     <div class="layer">
@@ -190,9 +270,7 @@
                             <i class="fa fa-remove"></i>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
     </div>
@@ -264,6 +342,7 @@
                         </div>
                         <input type="text" class="form-control" ng-model="ctrl.urlLineup">
                     </div>
+                    <small>   Ex : https://www.livescore.com/soccer/europa-league-2020-2021/qualification/hammarby-vs-lech-poznan/284191/</small>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
